Updated styling to mediaelement

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-    <html>
+    <html lang="en">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="CSS/normalize.css" type="text/css">
         <link href="https://fonts.googleapis.com/css?family=Lato:400.700&amp;subset=latin-ext" rel="stylesheet">
-        <link rel="stylesheet" href="CSS/style.css" type="text/css">
         <script src="http://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
         <script src="js/mediaelement-and-player.min.js"></script>
         <link rel="stylesheet" href="CSS/mediaelementplayer.css" />
+        <link rel="stylesheet" href="CSS/style.css" type="text/css">
+
+        <title>TeamTreehouse project 6</title>
 
 
     </head>
@@ -21,7 +23,7 @@
                     <source src="media/video.mp4" type="video/mp4">
                     <source src="media/video.ogg" type="video/ogg">
 
-                    <track src="media/captions.vtt" type="text/vtt" kind="subtitles"  srclang="en-GB-x-transcript" label="Timed transcript (word-level)">
+                    <track src="media/captions.vtt" kind="subtitles"  srclang="en" label="Timed transcript (word-level)">
                 </video>
             </div>
 
